@@ -1,8 +1,8 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.58.6
-Date: 2024-11-24
+Version: 0.99.58.7
+Date: 2024-11-27
 Authors@R: c(
   person(given="Andri", family="Signorell", 
          email = "andri@signorell.net", 
