@@ -31,7 +31,7 @@ export(
 "NemenyiTest","Now","OctToDec","OddsRatio","OPR","OrderMixed","Outlier","Overlap",
 "PageTest", "PlotProbDist",
 "PairApply","ParseFormula","ParseSASDatalines","CorPart","PasswordDlg","pBenf","PearsonTest",
-"PercTable", "Mgsub",
+"PercTable", "Mgsub", "SumCI",
 "Permn","Phi","plot.bagplot","plot.Conf","plot.Lc","plot.Lclist","plot.PostHocTest","PlotACF","PlotArea","PlotBag","PlotBagPairs",
 "PlotBubble","PlotCandlestick","PlotCirc","PlotCorr","ABCCoords","Bg",
 
