@@ -703,6 +703,7 @@ reference:
     - UnirootAll
     - EX
     - VarX
+    - SumCI
 
 # Data =======================================================================
 # ~ Datasets & Reference Data ------------------------------------------------
