@@ -5,7 +5,8 @@ DescTools 0.99.59 (2024-12-10)
 ------------------------------
 
 NEW FUNCTIONS ADDED:
-  * none
+  * SumCI() returns the confidence interval of the sum of multiple variables
+    with given confidence intervals.
 
 UPDATED FUNCTIONS:
   * BrierScoreCI() will accept scaled argument now.
